--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,11 @@ header {
     outline: none;
 }
 
+.tabs .tab-header > div:hover {
+    color: var(--heading-color);
+    transition: 0.3s all linear;
+}
+
 .tabs .tab-header > div.active {
     color: var(--main-color);
 }
