--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,13 @@ body{
     color: var(--bg-color);
     background: var(--body-color);
 }
+html::-webkit-scrollbar {
+    width: 0.5rem;
+    background: transparent;
+}
+html::-webkit-scrollbar-thumb {
+    background: var(--heading-color);
+}
 
 img {
     width: 100%;
@@ -61,13 +68,16 @@ header {
     z-index: 100;
 }
 
+.header-active {
+    background: var(--box-color);
+    transition: 0.4s;
+}
+
 .nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px 0;
-    background: var(--body-color);
-    opacity: 0.8;
 }
 
 .logo {
@@ -267,6 +277,10 @@ header {
     font-weight: 700;
     margin: 1rem 0;
 }
+.about-text p {
+    font-size: 0.825rem;
+    margin-top: 1.3rem;
+}
 
 .btn {
     font-size: 0.97rem;
@@ -373,3 +387,232 @@ header {
 }
 
 
+/* Contact form */
+
+.contact-form {
+    max-width: 600px;
+    margin: auto;
+    width: 100%;
+    display: grid;
+    row-gap: 1rem;
+}
+
+.contact-form input, .contact-form textarea {
+    border: none;
+    outline: none;
+    font-size: 0.9rem;
+    padding: 15px;
+    color: var(--bg-color);
+    background: var(--box-color);
+    border-radius: 0.4rem;
+}
+
+.contact-form .send-btn {
+    width: 120px;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 12px;
+    background: var(--main-color);
+    cursor: pointer;
+}
+
+.contact-form .send-btn:hover {
+    background: #546eff;
+    transition: 0.3s all linear;
+}
+
+/* Footer */
+
+.footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 1.4rem;
+    padding: 30px 0;
+}
+
+.footer p {
+    font-size: 0.9rem;
+}
+
+
+/* Scroll top */
+.scroll-top {
+    position: fixed;
+    bottom: -100%;
+    right: 1.5rem;
+}
+
+.scroll-top .bx {
+    padding: 8px;
+    font-size: 1.3rem;
+    color: var(--bg-color);
+    background: var(--box-color);
+    border-radius: 2rem;
+}
+
+.scroll-top .bx:hover {
+    background: var(--container-color);
+    transition: 0.3s;
+}
+
+.scroll-active {
+    bottom: 2rem;
+    transition: 0.3rem;
+}
+
+/* Responsive */
+
+@media (max-width: 990px) {
+    .container {
+        margin: 0 auto;
+        width: 90%;
+    }
+}
+
+@media (max-width: 892px) {
+    section {
+        padding: 2rem 0;
+    }
+    .nav {
+        padding: 12px 0;
+    }
+    
+    .heading {
+        font-size: 4rem;
+    }
+
+    .portfolio-box {
+        height: 257px;
+    }
+}
+
+@media (max-width: 775px) {
+
+    .logo {
+        font-size: 1.1rem;
+    }
+
+    .home {
+        min-height: 500px;
+        padding-top: 6rem;
+    }
+
+    .home-text h3 {
+        font-size: 1rem;
+    }
+    .home-text h2 {
+        font-size: 3rem;
+        line-height: 3.8rem;
+    }
+    .home-text p {
+        font-size: 0.825rem;
+    }
+
+    .portfolio-box {
+        height: 245px;
+    }
+    .menu-icon {
+        display: flex;
+    }
+    .navbar {
+        position: absolute;
+        top: 0;
+        right: -100%;
+        width: 300px;
+        height: 100vh;
+        background: var(--box-color);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 50px 20px;
+        transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+    .open-menu {
+        right: 0;
+        transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+
+    .nav-link {
+        display: block;
+        margin: 1rem 0;
+    }
+}
+
+@media (max-width: 635px) {
+    .about-content{
+        grid-template-columns: 1fr;
+    }
+
+    .about-data span {
+        font-size: 0.9rem;
+    }
+
+    .about-data h2 {
+        font-size: 1.7rem;
+        line-height: 2.3rem;
+        font-weight: 600;
+        margin: 0.8rem 0;
+    }
+
+    .about-text p {
+        font-size: 0.825rem;
+        letter-spacing: 1rem;
+        text-align: justify;
+        margin-top: 1.3rem;
+    }
+
+    .projects-content {
+        grid-template-columns: repeat(2,200px);
+    }
+}
+
+@media (max-width: 450px)  {
+    .home {
+        min-height: 485px;
+        padding-top: 5rem;
+    }
+
+    .home-img {
+        height: 140px;
+        width: 140px;
+    }
+
+    .home-img img {
+        height: 140px;
+        width: 140px;
+    }
+    .home-text h2 {
+        font-size: 2.1rem;
+        line-height: 3.2rem;
+    }
+    .home-text br {
+        display: contents;
+
+    }
+
+    .heading {
+        font-size: 3rem;
+    }
+
+    .about-data h2 {
+        font-size: 1.5rem;
+        line-height: 2.1rem;
+        margin: 0.6rem 0;
+    }
+
+    .portfolip-content {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 325px){
+    .navbar{
+        width: 100%;
+    }
+    .portfolio-box{
+        height: 190px;
+    }
+}
