--- a/css/style.css
+++ b/css/style.css
@@ -309,8 +309,8 @@ header {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background: var(--bg-color);
-    color: #222231;
+    background: var(--box-color);
+    color: var(--bg-color);
     width: 390px;
     height: 550px;
     padding: 20px 30px;
