--- a/css/style.css
+++ b/css/style.css
@@ -292,6 +292,10 @@ header {
     padding: 12px 16px;
     border-radius: 0.4rem;
     margin-top: 1rem;
+    transition:  .7s ease-in-out;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .btn .bx {
@@ -302,6 +306,130 @@ header {
     background: #546eff;
     transition: 0.3s all linear;
 }
+
+.btn.active {
+    position: relative;
+    font-size: 0;
+    background-color: transparent;
+}
+
+.progress-wrapper {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    transform: scale(0);
+    transition: .7s;
+    transition-delay: .5s;
+}
+
+.btn.active .progress-wrapper {
+    transform: scale(1);
+}
+
+.progress-wrapper .inner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 30px;
+    height: 30px;
+    background:#0d0f26;
+    border-radius: 50%;
+    z-index: 3;
+    transition: 1s ease;
+    transition-delay: 4s;
+}
+.btn.active .progress-wrapper .inner {
+    transform: translate(-50%, -50%) scale(0);
+}
+
+.progress-wrapper .bar {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #ededed;
+    border-radius: 50%;
+    clip: rect(0px, 50px, 50px, 25px);
+}
+
+.circle .bar .progress {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background:#546eff;
+    border-radius: 50%;
+    clip: rect(0px, 25px, 50px, 0px);
+    z-index: 1;
+}
+
+.circle .bar.left .progress {
+    transition: 1.5s linear;
+    transition-delay: 1s;
+}
+
+.btn.active .circle .bar.left .progress {
+    transform: rotate(180deg);
+}
+
+.circle .right {
+    transform: rotate(180deg);
+
+}
+
+.circle .bar.right .progress {
+    transition: 1.5s linear;
+    transition-delay: 2.5s;
+}
+
+.btn.active .circle .bar.right .progress {
+    transform: rotate(180deg);
+}
+
+.progress-wrapper .checkmark {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    z-index: 2;
+}
+
+.progress-wrapper .checkmark span {
+    position: absolute;
+    display: block;
+    width: 15px;
+    height: 3.5px;
+    background: white;
+    border-radius: 5px;
+    transform-origin: left;
+    transition: .5s;
+}
+
+.progress-wrapper .checkmark span:last-child {
+    top: 22.5px;
+    left: 11px;
+    width: 15px;
+    transform: rotate(45deg) scaleX(0);
+    transition-delay: 5s;
+}
+
+.btn.active .progress-wrapper .checkmark span:last-child {
+    transform: rotate(45deg) scaleX(1);
+}
+
+.progress-wrapper .checkmark span:first-child {
+    top: 32.5px;
+    left: 20px;
+    width: 25px;
+    transform: rotate(-45deg) scaleX(0);
+    transition-delay: 5.5s;
+}
+
+.btn.active .progress-wrapper .checkmark span:first-child {
+    transform: rotate(-45deg) scaleX(1);
+}
+
+
+
 /* Skills */
 #skills p{
     font-size: 13px;
@@ -668,6 +796,7 @@ header {
     bottom: 2rem;
     transition: 0.3rem;
 }
+
 
 /* Responsive */
 
