--- a/css/style.css
+++ b/css/style.css
@@ -787,8 +787,8 @@ header {
 }
 
 .project .wrapper {
-    width: 80%;
-    height: 40vh;
+    width: 100%;
+    height: 30%;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.65);
     margin: 5rem auto;
     overflow: hidden;
@@ -803,8 +803,8 @@ header {
 }
 
 .project .slider-img{
-    background-position: center;
-    background-color: #aaa;
+    width: 100%;
+    height: 100%;
 }
 
 .project .button-holder .button {
@@ -828,16 +828,17 @@ header {
     40%{transform: translateX(-200%);}
     50%{transform: translateX(-200%);}
     60%{transform: translateX(-300%);}
-    70%{transform: translateX(-3000%);}
+    70%{transform: translateX(-300%);}
     80%{transform: translateX(-300%);}
-    90%{transform: translateX(0%);}
+    90%{transform: translateX(-0%);}
     100%{transform: translateX(0%);}
 }
 
 .project .button-holder {
     position: absolute;
     left: 45%;
-    bottom: 33%;
+    bottom: 18%;
+    display: none;
 }
 
 .project p{
